# nl2ltl

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGES.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  linting.yml  pythonpackage.yml  test.yml  test_gpt.yml
docs/: changelog.md  references.md
nl2ltl/: __init__.py  core.py  exceptions.py  helpers.py
nl2ltl/declare/: __init__.py  base.py  declare.py  misc.py
nl2ltl/engines/: __init__.py  base.py  grounding.py  utils.py
nl2ltl/engines/gpt/: __init__.py  core.py  output.py
nl2ltl/engines/gpt/data/: prompt.json
nl2ltl/engines/gpt3/: core.py  env.sample.py  output.py
nl2ltl/engines/gpt4/: __init__.py  core.py  output.py
nl2ltl/engines/rasa/: __init__.py  core.py  helpers.py  output.py
nl2ltl/engines/rasa/data/: config.yml  domain.yml  nlu_training.yml
nl2ltl/filters/: __init__.py  base.py  simple_filters.py
nl2ltl/filters/utils/: __init__.py  conflicts.py  subsumptions.py
tests/: __init__.py  conftest.py  test_gpt.py  test_gpt3.py  test_gpt4.py  test_rasa.py
