[metadata]
name=nl2ltl
author=Tathagata Chakraborti <tathagata.chakraborti1@ibm.com>, Francesco Fuggitti <fuggitti@diag.uniroma1.it>
version = attr: nl2ltl.__version__
description = From Natural Language to Linear-time Temporal Logic
long_description = file: README.md, LICENSE
long_description_content_type = "text/markdown"
keywords = natural language nlu ltl temporal logic
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Environment :: Console
    Environment :: Web Environment
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development


[option.project_urls]
"Source": "https://github.com/whitemech/nl2ltl"

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires =
    rasa
    pylogics

python_requires= >=3.8

[options.package_data]
* = *.txt, *.md

[options.packages.find]
include =
    nl2ltl*
exclude =

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore = W503
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    nl2ltl/__init__.py,
    scripts/whitelist.py
max-complexity = 10
max-line-length = 120

[mypy]
python_version = 3.8
strict_optional = True
